fixed background-color: none to be background-color: rgba(0,0,0,0), removed align-items: space-between and added px to 0, so it is now 0px

--- a/themes/inhabitant/sass/_elements.scss
+++ b/themes/inhabitant/sass/_elements.scss
@@ -160,7 +160,6 @@ article.type-product {
 	div.text-wrapper {
 		display: flex;
 		justify-content: center;
-		align-items: space-between;
 		flex-flow: row nowrap;
 		div.dots {
 			border-bottom: 2px black dotted;
