--- a/themes/inhabitant/sass/_normalize.scss
+++ b/themes/inhabitant/sass/_normalize.scss
@@ -42,7 +42,7 @@ template {
 }
 
 a {
-	background-color: transparent;
+	background-color: rgba(0,0,0,0);
 }
 
 a:active,
